--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,9 @@
      font-family: "Gilroy-SemiBold";
      src: url(..fonts/Gilroy/Gilroy-SemiBold.ttf) format("truetype");
 }
+:root {
+     --primary-bg: "linear-gradient(225.49deg, #FF9900 -10.05%, #F06445 116.14%);"
+}
+.primary_bg {
+     background: var(--primary-bg);
+}
