--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,25 @@
      background: linear-gradient(225.49deg, #FF9900 -10.05%, #F06445 116.14%);
 }
 
+.btn_md {
+     padding: 16px 24px;
+     gap: 12px;
+     outline: none;
+     border: none;
+     border-radius: 9999px;
+
+     font-size: 20px;
+     font-weight: 600;
+     line-height: 27px;
+
+     display: flex;
+     align-items: center;
+     justify-content: center;
+
+     color: white;
+     text-align: center;
+     letter-spacing: -0.509404px;
+}
 
 .button {
      position: relative;
@@ -38,9 +57,11 @@
      position: relative;
      pointer-events: none;
 }
+
 .target {
      transition: 0.3s all;
 }
+
 .button::before {
      --size: 0;
      content: '';
@@ -64,6 +85,225 @@
      /* background: linear-gradient(112deg, rgb(29 15 56 / 60%) 3.18%, rgb(51 24 33 / 60%) 25.55%, rgb(40 47 59 / 60%) 62.89%, rgb(46 77 106 / 60%) 106.42%); */
      backdrop-filter: blur(210px);
 }
+
 .noice-bg {
      background-image: url(../images/texture/noise-bg.png);
 }
+
+.containers {
+     display: flex;
+     flex-direction: column;
+     width: 100%;
+     height: 100vh;
+     align-items: center;
+     justify-content: center;
+     align-content: center;
+}
+
+.containers:nth-of-type(1) {
+     background-color: lightgrey;
+}
+
+/*MACBOOK PRO*/
+.contenitore-css-macbook {
+     width: 100%;
+      /* overflow:hidden; */
+     /* height: 100%; */
+     /* margin-top: 25vh; */
+     position: relative;
+}
+
+.css-macbook {
+     max-width: 100%;
+     /* Set the desired maximum width of the macbook */
+     min-width: 99vmin;
+     /* Set the desired minimum width of the macbook */
+     margin: 50px auto 0;
+     /* Align mockup to center */
+}
+
+.css-macbook div {
+     box-sizing: border-box !important;
+     /* Just in case */
+}
+
+/* Center the display */
+.css-macbook .macbook-display-position {
+     width: 40%;
+     margin: 0 auto;
+}
+
+/* The display */
+.css-macbook .macbook-display {
+     position: relative;
+     width: 100%;
+     height: 0;
+     padding-bottom: 65.9442%;
+     background: #373435;
+
+     -webkit-border-top-left-radius: 3.5% 5.3075%;
+     -moz-border-radius-topleft: 3.5% 5.3075%;
+     border-top-left-radius: 3.5% 5.3075%;
+
+     -webkit-border-top-right-radius: 3.5% 5.3075%;
+     -moz-border-radius-toptight: 3.5% 5.3075%;
+     border-top-right-radius: 3.5% 5.3075%;
+     outline: .5px solid #fff
+}
+
+/* Webcam */
+/* Browser may not render a perfect circle */
+.css-macbook .macbook-display:before {
+     content: '';
+     display: block;
+     position: absolute;
+     top: 3%;
+     left: 50%;
+     width: 1%;
+     height: 1.5164%;
+     margin-left: -0.5%;
+     border-radius: 50%;
+     background: #999;
+     opacity: 0;
+     transition: opacity .3s ease
+}
+
+.acceso .macbook-display:before {
+     opacity: 1;
+     display: block
+}
+
+/* Glare */
+/* Browser may not render the top and right offset evenly */
+.css-macbook .macbook-display:after {
+     content: '';
+     display: none;
+     position: absolute;
+     right: 0.4%;
+     top: 0.64%;
+     width: 62.5%;
+     height: 100%;
+
+     background: none;
+     /* Hide the gradient on older browsers */
+     background: -moz-linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(255, 255, 255, 0.05) 61%);
+     /* FF3.6+ */
+     background: -webkit-linear-gradient(36deg, rgba(0, 0, 0, 0) 61%, rgba(255, 255, 255, 0.05) 61%);
+     /* Chrome10+ and Safari5.1+ compute the degree differently */
+     background: -o-linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(255, 255, 255, 0.05) 61%);
+     /* Opera 11.10+ */
+     background: -ms-linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(255, 255, 255, 0.05) 61%);
+     /* IE10+ */
+     background: linear-gradient(55deg, rgba(0, 0, 0, 0) 61%, rgba(255, 255, 255, 0.05) 61%);
+
+     -webkit-border-top-right-radius: 5.3075%;
+     -moz-border-radius-toptight: 5.3075%;
+     border-top-right-radius: 5.3075%;
+}
+
+/* Only show glare, if the class is applied */
+.css-macbook.with-glare .macbook-display:after {
+     display: block;
+}
+
+/* Position the screen and give make it the right size, ratio 16:10 */
+.css-macbook .macbook-screen-position {
+     position: absolute;
+     top: 6.5%;
+     width: 93.2%;
+     left: 3.4%;
+     height: 0;
+     margin: 0;
+     padding-bottom: 58.25%;
+     /* Ratio */
+}
+
+/* Give parent (this element) a "height", so that child elements can use height: 100%;*/
+.css-macbook .macbook-screen {
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     overflow: hidden;
+     background: #4b4b4d;
+     /* bg color if content is not big enough, or rendering is off */
+}
+
+/* Image on the screen */
+.css-macbook .macbook-screen img {
+     max-width: 100%;
+     height: auto;
+}
+
+/* Iframe on the screen */
+.css-macbook .macbook-screen iframe {
+     width: 100%;
+     height: 100%;
+     border: 0;
+}
+
+/* Macbook body */
+.css-macbook .macbook-body {
+     position: relative;
+     width: 100%;
+     height: 0;
+     padding-bottom: 2.3%;
+     background: #e6e7e8;
+}
+
+/* The groove */
+.css-macbook .macbook-body:before {
+     content: '';
+     display: block;
+     position: absolute;
+     top: 0;
+     left: 50%;
+     width: 14.0740%;
+     height: 0;
+     padding-bottom: 1.4814%;
+     margin-left: -7.037%;
+     background: #a9abae;
+
+     -webkit-border-bottom-left-radius: 7.0370% 50%;
+     -moz-border-radius-bottomleft: 7.0370% 50%;
+     border-bottom-left-radius: 7.0370% 50%;
+
+     -webkit-border-bottom-right-radius: 7.0370% 50%;
+     -moz-border-radius-bottomtight: 7.0370% 50%;
+     border-bottom-right-radius: 7.0370% 50%;
+}
+
+/* Macbook bottom */
+.css-macbook .macbook-bottom-cover {
+     width: 100%;
+     height: 0;
+     padding-bottom: 0.7407%;
+     background: #a9abae;
+
+     -webkit-border-bottom-left-radius: 12% 600%;
+     -moz-border-radius-bottomleft: 12% 600%;
+     border-bottom-left-radius: 12% 600%;
+
+     -webkit-border-bottom-right-radius: 12% 600%;
+     -moz-border-radius-bottomtight: 12% 600%;
+     border-bottom-right-radius: 12% 600%;
+}
+
+.video-ux-design {
+     width: 100%;
+     height: -webkit-fill-available;
+     object-fit: cover;
+}
+
+.pa-hero-bg-overlay {
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     -webkit-transform: translateZ(20px);
+     -moz-transform: translateZ(20px);
+     transform: translateZ(20px);
+     background: rgba(0,0,0,.65);
+ }
