--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,27 @@
 }
 
 .bg-blur {
+     position: absolute;
+     inset: 0;
      background: linear-gradient(119.3deg, rgba(48, 38, 67, 0.6) 3.18%, rgba(21, 15, 17, 0.6) 25.55%, rgba(52, 56, 63, 0.6) 62.89%, rgba(39, 56, 72, 0.6) 106.42%);
      /* background: linear-gradient(112deg, rgb(29 15 56 / 60%) 3.18%, rgb(51 24 33 / 60%) 25.55%, rgb(40 47 59 / 60%) 62.89%, rgb(46 77 106 / 60%) 106.42%); */
      backdrop-filter: blur(210px);
+     -webkit-backdrop-filter: blur(210px);
+     height: 100%;
+     width: 100%;
+     -webkit-transform: translateZ(0);
+     -webkit-backface-visibility: hidden;
+     -webkit-perspective: 1000;
 }
-
+/* .card-details3::after {
+     content: '';
+     position: absolute;
+     inset: 0;
+     background-color: rgb(255 255 255/60%);
+     backdrop-filter: blur(5px);
+     border-radius: inherit;
+     z-index: -1;
+   } */
 .noice-bg {
      background-image: url(../images/texture/noise-bg.png);
 }
@@ -114,11 +130,12 @@
 }
 
 .css-macbook {
+     scale: 2.9;
      max-width: 100%;
      /* Set the desired maximum width of the macbook */
      min-width: 99vmin;
      /* Set the desired minimum width of the macbook */
-     margin: 50px auto 0;
+     /* margin: 50px auto 0; */
      /* Align mockup to center */
 }
 
@@ -148,6 +165,14 @@
      -webkit-border-top-right-radius: 3.5% 5.3075%;
      -moz-border-radius-toptight: 3.5% 5.3075%;
      border-top-right-radius: 3.5% 5.3075%;
+
+     -webkit-border-bottom-left-radius: 3.5% 5.3075%;
+     -moz-border-radius-bottomleft: 3.5% 5.3075%;
+     border-bottom-left-radius: 3.5% 5.3075%;
+
+     -webkit-border-bottom-right-radius: 3.5% 5.3075%;
+     -moz-border-radius-bottomtight: 3.5% 5.3075%;
+     border-bottom-right-radius: 3.5% 5.3075%;
      outline: .5px solid #fff
 }
 
@@ -244,16 +269,16 @@
 }
 
 /* Macbook body */
-.css-macbook .macbook-body {
+/* .css-macbook .macbook-body {
      position: relative;
      width: 100%;
      height: 0;
      padding-bottom: 2.3%;
      background: #e6e7e8;
-}
+} */
 
 /* The groove */
-.css-macbook .macbook-body:before {
+/* .css-macbook .macbook-body:before {
      content: '';
      display: block;
      position: absolute;
@@ -272,10 +297,10 @@
      -webkit-border-bottom-right-radius: 7.0370% 50%;
      -moz-border-radius-bottomtight: 7.0370% 50%;
      border-bottom-right-radius: 7.0370% 50%;
-}
+} */
 
 /* Macbook bottom */
-.css-macbook .macbook-bottom-cover {
+/* .css-macbook .macbook-bottom-cover {
      width: 100%;
      height: 0;
      padding-bottom: 0.7407%;
@@ -288,7 +313,7 @@
      -webkit-border-bottom-right-radius: 12% 600%;
      -moz-border-radius-bottomtight: 12% 600%;
      border-bottom-right-radius: 12% 600%;
-}
+} */
 
 .video-ux-design {
      width: 100%;
