--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,15 +23,15 @@
 }
 
 .btn_md {
-     padding: 16px 24px;
+     padding: 10px 20px;
      gap: 12px;
      outline: none;
      border: none;
      border-radius: 9999px;
 
-     font-size: 20px;
+     /* font-size: 20px; */
      font-weight: 600;
-     line-height: 27px;
+     /* line-height: 27px; */
 
      display: flex;
      align-items: center;
@@ -330,5 +330,5 @@
      -webkit-transform: translateZ(20px);
      -moz-transform: translateZ(20px);
      transform: translateZ(20px);
-     background: rgba(0,0,0,.65);
+     background: rgba(0,0,0,.78);
  }
